Programming/javascript/visualization/style.css
.reactionsBar{
    fill: steelblue;
}

.reactionsBar:hover{
    fill: brown;
}

.axis {
    font: 10px sans-serif;
}

.axis path,
.axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

div {
    padding: 3px 6px 10px 6px;
    border: 1px solid darkgrey;
    margin: 2px;
}

.donutChart{
    width: 100%;
    height: 100%;
}

path.slice{
    stroke-width:2px;
}

polyline{
    opacity: .3;
    stroke: black;
    stroke-width: 2px;
    fill: none;
}

